k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: los-app
  labels:
    app: los-app
