k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: los-app
  namespace: los-app
  labels:
    app: los-app
spec:
  type: ClusterIP
  selector:
    app: los-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
